<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/quantity_text"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/add"
        android:layout_marginBottom="8dp"
        android:onClick="increment"
        />
    <TextView
        android:id="@+id/quantity_text_view"
        android:text="@string/quantity"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textAllCaps="true"
        android:layout_marginBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/subtract"
        android:onClick="decrement"
        android:layout_marginBottom="16dp"
        />
    <TextView
        android:text="@string/price_text"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/price_text_view"
        android:text="@string/price"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:text="@string/order"
        android:onClick="submitOrder"
        />
</LinearLayout>
